Rename test file to run on travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ python:
 install:
   - pip install -e .
 
-script: python test_remoted.py
+script: python test_remosh.py
 
 notifications:
   email: false
